// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Fit /> component > renders properly 1`] = `
<div
  style="position: relative;"
>
  <span
    style="display: contents;"
  >
    <span
      style="position: absolute; height: 0px; top: 100%; bottom: auto; width: 0px; left: 0px; right: auto;"
    />
  </span>
</div>
`;

exports[`<Fit /> component > renders properly given React component as child 1`] = `
<div
  style="position: relative;"
>
  <span
    style="display: contents;"
  >
    <span
      style="position: absolute; height: 0px; top: 100%; bottom: auto; width: 0px; left: 0px; right: auto;"
    />
  </span>
</div>
`;

exports[`<Fit /> component > renders properly given element with ref prop as child 1`] = `
<div
  style="position: relative;"
>
  <span
    style="display: contents;"
  >
    <span
      style="position: absolute; height: 0px; top: 100%; bottom: auto; width: 0px; left: 0px; right: auto;"
    />
  </span>
</div>
`;

exports[`<Fit /> component > renders properly given mainAxis = "x" 1`] = `
<div
  style="position: relative;"
>
  <span
    style="display: contents;"
  >
    <span
      style="position: absolute; width: 0px; left: 100%; right: auto; height: 0px; top: 0px; bottom: auto;"
    />
  </span>
</div>
`;

exports[`<Fit /> component > renders properly given mainAxis = "y" 1`] = `
<div
  style="position: relative;"
>
  <span
    style="display: contents;"
  >
    <span
      style="position: absolute; height: 0px; top: 100%; bottom: auto; width: 0px; left: 0px; right: auto;"
    />
  </span>
</div>
`;
